# kickstart

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
quarto_post_init/: cli.py
quarto_post_init/templates/notebook/: cookiecutter.json
quarto_post_init/templates/post/: cookiecutter.json
quarto_post_init/templates/post/{{cookiecutter.post_slug}}/: index.qmd
src/kickstart/: cli.py  extensions.py
src/kickstart/templates/notebook/: cookiecutter.json
src/kickstart/templates/notebook/{{cookiecutter.notebook_slug}}/: notebook.ipynb
src/kickstart/templates/post/: cookiecutter.json
tests/: test_quarto_post_init.py
