[project]
name = "quarto-post-init"
version = "0.1"
description = "Personal tool to create Quarto post directories"
readme = "README.md"
authors = [{name = "Brian M. Dennis"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "python-slugify"
]

[project.urls]
Homepage = "https://github.com/crossjam/quarto-post-init"
Changelog = "https://github.com/crossjam/quarto-post-init/releases"
Issues = "https://github.com/crossjam/quarto-post-init/issues"
CI = "https://github.com/crossjam/quarto-post-init/actions"

[project.entry-points.console_scripts]
quarto-post-init = "quarto_post_init.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
