[project]
name = "kickstart"
version = "0.1"
description = "Personal tool to kickstart writing for the web"
readme = "README.md"
authors = [{name = "Brian M. Dennis"}]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "python-slugify",
    "questionary",
    "cookiecutter",
    "jinja2_time",
]

[project.urls]
Homepage = "https://github.com/crossjam/kickstart"
Changelog = "https://github.com/crossjam/kickstart/releases"
Issues = "https://github.com/crossjam/kickstart/issues"
CI = "https://github.com/crossjam/kickstart/actions"

[project.entry-points.console_scripts]
kickstart = "kickstart.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
